# fastapi-celery-task-manager

./: README.md  __init__.py  _header.html  celery_admin.py  celery_monitor.html  pyproject.toml  ui.py
fastapi_celery_manager/: __init__.py  ui.py
fastapi_celery_manager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fastapi_celery_task_manager/: __init__.py  celery_admin.py  ui.py
fastapi_celery_task_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: README.md  _header.html  celery_monitor.html
