[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-celery-manager"
version = "0.0.3"
description = "FastAPI router + Jinja2 template for basic Celery administration (inspect/enqueue/control)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Fabian Aichele", email = "aichele@zykl.io"}]
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.104.0",
  "pydantic>=2.0.0",
  "celery>=5.3.0",
  "jinja2>=3.1.0",
]

[tool.setuptools]
packages = ["fastapi_celery_manager"]
package-dir = {"fastapi_celery_manager" = "fastapi_celery_manager"}
include-package-data = true

[tool.setuptools.package-data]
fastapi_celery_task_manager = ["templates/*.html", "templates/*.md"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]

